# moot

./: .gitignore  BUSINESS_CASE.md  LICENSE  PROPOSAL.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
src/polylogos/: cli.py  debate.py
src/polylogos/dynamics/: __init__.py  friedkin_johnsen.py  orthogonality.py
src/polylogos/graph/: __init__.py  argument_graph.py
src/polylogos/llm/: __init__.py  anthropic_provider.py  gemini_provider.py  mock.py  provider.py
src/polylogos/orchestration/: __init__.py  cluster.py
src/polylogos/personas/: __init__.py  citizens_seed.py  eval_seed.py  generator.py  investor_seed.py  seed_archetypes.py
src/polylogos/schemas/: __init__.py  argument.py  debate.py  persona.py
src/polylogos/synthesis/: __init__.py  extractive.py
src/polylogos/web/: __init__.py  app.py
src/polylogos/web/static/: index.html
tests/: test_dynamics.py  test_e2e.py  test_persona_seed.py
