[project]
name = "polylogos"
version = "0.0.1"
description = "Open 500-agent debate engine for strategic decisions — walking skeleton"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.9",
    "numpy>=2.0",
    "networkx>=3.3",
    "rich>=13.9",
    "typer>=0.13",
    "anthropic>=0.40",
    "google-genai>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
polylogos = "polylogos.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.115",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polylogos"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
